# ddb

./: CMakeLists.txt  Dockerfile  Jenkinsfile
.github/actions/build_extensions/: action.yml
.github/actions/manylinux_2014_setup/: action.yml
.github/actions/ubuntu_18_setup/: action.yml
.github/workflows/: LinuxRelease.yml  Main.yml  NightlyTests.yml  OSX.yml  TriggerDotNetBuild.yml  Windows.yml  _extension_distribution.yml
examples/embedded-c++/: CMakeLists.txt  Makefile  main.cpp
extension/: extension_config.cmake
extension/httpfs/: CMakeLists.txt
extension/kafkaredo/: CMakeLists.txt  kafkafs.cpp  kafkaredo_extension.cpp  vcpkg.json
extension/kafkaredo/include/: kafkafs.hpp
scripts/: setup_manylinux2014.sh
src/catalog/: dependency_manager.cpp
src/catalog/catalog_entry/: duck_table_entry.cpp
src/common/: file_system.cpp  local_file_system.cpp  virtual_file_system.cpp
src/common/arrow/: arrow_appender.cpp
src/common/types/: data_chunk.cpp  value.cpp  vector.cpp
src/execution/index/art/: art.cpp
src/execution/operator/persistent/: physical_insert.cpp  physical_update.cpp
src/include/: duckdb.h
src/include/duckdb/catalog/catalog_entry/: duck_table_entry.hpp
src/include/duckdb/common/: file_system.hpp  local_file_system.hpp  opener_file_system.hpp  virtual_file_system.hpp
src/include/duckdb/common/arrow/: arrow_appender.hpp
src/include/duckdb/common/types/: data_chunk.hpp  value.hpp  vector.hpp
src/include/duckdb/common/types/row/: row_data_collection.hpp
src/include/duckdb/function/: change_data_capature_function.hpp
src/include/duckdb/main/: appender.hpp  attached_database.hpp  client_context.hpp  config.hpp  connection.hpp  database.hpp  settings.hpp
src/include/duckdb/parser/parsed_data/: create_info.hpp
src/include/duckdb/storage/: block_manager.hpp  data_table.hpp  in_memory_block_manager.hpp  single_file_block_manager.hpp  storage_info.hpp  storage_manager.hpp  write_ahead_log.hpp
src/include/duckdb/storage/table/: array_column_data.hpp  column_data.hpp  commit_version_manager.hpp  data_table_info.hpp  list_column_data.hpp  row_group.hpp  row_group_collection.hpp  row_version_manager.hpp  standard_column_data.hpp  struct_column_data.hpp  update_segment.hpp
src/include/duckdb/transaction/: cdc_write_state.hpp  duck_transaction.hpp  duck_transaction_manager.hpp  local_storage.hpp  meta_transaction.hpp  transaction.hpp  transaction_context.hpp  transaction_manager.hpp  undo_buffer.hpp  update_info.hpp
src/main/: appender.cpp  attached_database.cpp  client_context.cpp  config.cpp  connection.cpp  database.cpp  stream_query_result.cpp
src/main/capi/: anybase-c.cpp  appender-c.cpp  arrow-c.cpp  duckdb-c.cpp  stream-c.cpp
src/main/settings/: settings.cpp
src/storage/: data_table.cpp  local_storage.cpp  single_file_block_manager.cpp  storage_manager.cpp  wal_replay.cpp
src/storage/serialization/: serialize_create_info.cpp
src/storage/table/: array_column_data.cpp  column_checkpoint_state.cpp  column_data.cpp  list_column_data.cpp  row_group.cpp  row_group_collection.cpp  standard_column_data.cpp  struct_column_data.cpp  update_segment.cpp
src/transaction/: CMakeLists.txt  cdc_write_state.cpp  commit_state.cpp  duck_transaction.cpp  duck_transaction_manager.cpp  meta_transaction.cpp  timestamp_manager.cpp  transaction_context.cpp  undo_buffer.cpp
test/api/: test_reset.cpp
test/api/capi/: CMakeLists.txt  test_capi_anybase.cpp  test_capi_appender.cpp  test_capi_arrow.cpp  test_upsert.cpp
test/appender/: test_appender.cpp  test_merger.cpp
test/persistence/: test_persistence.cpp
